# peer-to-peer

./: LICENSE  README.md
dht-app/: Cargo.toml  README.md
dht-app/src/: main.rs
kubernetes-setup/: README.md
kubernetes-setup/1_scenario_p2p-app/: 2_pod-a.yml  3_pod-b.yml  pod-a-dockerfile.dev  pod-b-dockerfile.dev
kubernetes-setup/2_scenario_mdns-app/: 2_pod-a.yml  3_pod-b.yml  4_pod-c.yml  5_pod-d.yml  mdns-app-dockerfile.dev
kubernetes-setup/3_scenario_dht-app/: 2_pod-a.yml  3_pod-b.yml  4_pod-c.yml  5_pod-d.yml  dht-app-dockerfile.dev
mdns-app/: Cargo.toml  README.md
mdns-app/src/: main.rs
p2p-app/: Cargo.toml  README.md
p2p-app/src/: main.rs
p2p-setup/: 1_namespace.yml  2_platform-network.yml  2_pod-a.yml  3_node-a-service.yml  3_pod-b.yml  4_node-a-deployment.yml  5_node-b-service.yml  6_node-b-deployment.yml  README.md  dht-dockerfile.dev  dockerfile.dev  pod-b-dockerfile.dev
